# MiniBots

./: CMakeLists.txt  README.md  main.cpp
lib/: debugger.hpp  observer.hpp
src/: debugger.cpp
test/: debuggerTest.cpp
